[tool.poetry]
name = "cis452_deadlockdetection"
version = "0.1.0"
description = ""
authors = ["sunuwara <sunuwara@mail.gvsu.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.5"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
